[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/kenney_tiny-dungeon/tilemap_packed.png" type="Texture" id=1]
[ext_resource path="res://assets/font_small.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/font_large.tres" type="DynamicFont" id=3]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 16, 128, 16, 16 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.247059, 0.14902, 0.192157, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 64
custom_constants/margin_top = 64
custom_constants/margin_left = 64
custom_constants/margin_bottom = 64

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_left = 64.0
margin_top = 64.0
margin_right = 960.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 98.0
margin_top = 114.0
margin_right = 798.0
margin_bottom = 358.0
rect_min_size = Vector2( 700, 0 )
custom_constants/separation = 64

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer"]
margin_right = 372.0
margin_bottom = 244.0
custom_constants/separation = 32

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 372.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 3 )
text = "Knight VS Crabs"

[node name="HighScoreLabel" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 372.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 2 )
text = "High Score: 9999"
align = 1

[node name="StartButton" type="Button" parent="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 372.0
margin_bottom = 140.0
custom_fonts/font = ExtResource( 2 )
text = "Start"
flat = true

[node name="OptionsButton" type="Button" parent="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 172.0
margin_right = 372.0
margin_bottom = 192.0
custom_fonts/font = ExtResource( 2 )
text = "Options"
flat = true

[node name="QuitButton" type="Button" parent="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 224.0
margin_right = 372.0
margin_bottom = 244.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"
flat = true

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CenterContainer/HBoxContainer"]
margin_left = 436.0
margin_right = 700.0
margin_bottom = 244.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 1 )
stretch_mode = 6

[connection signal="pressed" from="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
